# ebook-reader

./: Cargo.toml  Dioxus.toml  index.html
.devcontainer/: devcontainer.json
.github/workflows/: web.yml
.github/workspaces/: web.yml
src/: app.rs  book.rs  lib.rs  main.rs
src/app/: styles.rs
test/Made With Creative Commons/OEBPS/: content.opf  toc.ncx
test/Made With Creative Commons/OEBPS/Styles/: Style0001.css
test/Made With Creative Commons/OEBPS/Text/: acknowledgements.xhtml  amandapalmer.xhtml  anunusualinvitation.xhtml  arduino.xhtml  artica.xhtml  bibliography.xhtml  blenderinstitute.xhtml  business20.xhtml  cardsagainsthumanity.xhtml  corydoctorow.xhtml  cover.xhtml  davidfosterwallace.xhtml  figshare.xhtml  figurenz.xhtml  forward.xhtml  howtobemadewithcreativecommons.xhtml  introduction.xhtml  jonathanmann.xhtml  knowledgeunlatched.xhtml  license.xhtml  lumenlearning.xhtml  nounproject.xhtml  opendatainstitute.xhtml  opendesk.xhtml  openstax.xhtml  part1.xhtml  part2.xhtml  plos.xhtml  rijksmuseum.xhtml  shareable.xhtml  siyavula.xhtml  sparkfun.xhtml  teachaids.xhtml  theconversation.xhtml  thecreativecommonslicenses.xhtml  thenewworldofdigitalcommons.xhtml  title.xhtml  tribeofnoise.xhtml  wikimedia.xhtml
