[package]
name = "ebook-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["fermi"] }
epub = "1.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.10"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "FileReader",
    "FileList",
    "File",
    "Blob",
    "console",
] }
js-sys = "0.3"
futures = "0.3"

[features]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
