[package]
name = "ebook-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub = { git = "https://github.com/TheBotlyNoob/epub-rs" }
cfg-if = "1.0"
tracing = "0.1"
iced = { version = "0.6", features = ["image"] }
base64 = "0.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.10"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "FileReader",
    "FileList",
    "File",
    "Blob",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
iced_web = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
# strip = true # doesn't work with wasm-bindgen
